--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -14,5 +14,8 @@
 # limitations under the License.
 ###############################################################################
 
-junit.jupiter.execution.parallel.mode.default=concurrent
 junit.jupiter.execution.parallel.enabled=true
+junit.jupiter.execution.parallel.mode.default=concurrent
+junit.jupiter.execution.parallel.config.strategy=fixed
+junit.jupiter.execution.parallel.config.fixed.parallelism=3
+junit.jupiter.execution.parallel.config.fixed.max-pool-size=3
