--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@ limitations under the License.
   <!-- Maven Project Coordinates -->
   <groupId>io.github.epadronu</groupId>
   <artifactId>dwalin</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
   
   <!-- Maven Project Information -->
   <name>Dwalin</name>
