--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@ limitations under the License.
     <allure.version>2.28.1</allure.version>
     <assertj.version>3.26.3</assertj.version>
     <image.comparison.version>4.4.0</image.comparison.version>
+    <junit.pioneer.version>2.2.0</junit.pioneer.version>
     <junit.version>5.10.3</junit.version>
     <lang3.version>3.15.0</lang3.version>
     <log4j.version>2.23.1</log4j.version>
@@ -163,6 +164,12 @@ limitations under the License.
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>${assertj.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit-pioneer</groupId>
+      <artifactId>junit-pioneer</artifactId>
+      <version>${junit.pioneer.version}</version>
       <scope>test</scope>
     </dependency>
 
